<resources>
    <string name="app_name">云依生工业互联网App平台</string>
    <string name="bottom_bar_index">首页</string>
    <string name="bottom_bar_project">项目</string>
    <string name="bottom_bar_task">任务</string>
    <string name="bottom_bar_my">我的</string>
    <string name="top_bar_title">title</string>
    <string name="top_bar_msg">铃铛</string>
    <string name="top_bar_chart">报表</string>
    <string name="sure">确定</string>
    <string name="account">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="tologin">立即登陆</string>
    <string name="zhuce">立即注册</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="company_name">公司名称</string>
    <string name="company_address">公司地址</string>
    <string name="company_num">公司编号</string>
    <string name="user_name">姓名</string>
    <string name="phone_num">手机号</string>
    <string name="yzm">验证码</string>
    <string name="get_yzm">获取验证码</string>
    <string name="xy">已阅读并同意用户协议</string>
    <string name="tobacklogin">返回登录</string>
    <string name="update">提交</string>
    <string name="newpassword">新密码</string>
    <string name="tongxunlu">通讯录</string>
    <string name="notice">公告</string>
    <string name="beiwanglu">备忘录</string>
    <string name="todayschedule">今日日程</string>
    <string name="newpassworded">重复新密码</string>
    <string name="seeall">查看全部</string>
    <string name="str">仅展示个人PC端数据</string>
    <string name="liucheng">审批任务</string>
    <string name="clickdelete">已添加(点击删除)</string>
    <string name="canadd">可添加</string>
    <string name="baobiao">报表</string>
    <string name="shaixuan">筛选</string>
    <string name="allmsg">全部消息</string>
    <string name="sendnotice">发公告</string>
    <string name="search">搜索</string>
    <string name="next">下一步</string>
    <string name="noticetitle">*公告标题</string>
    <string name="fujian">附件</string>
    <string name="senfrange">*发布范围</string>
    <string name="noticedeatil">*公告内容</string>
    <string name="noticedeatils">公告详情</string>
    <string name="send">发布</string>
    <string name="zuzhi">组织架构</string>
    <string name="projectjiagou">项目架构</string>
    <string name="anpaiwork">安排工作</string>
    <string name="invite">邀请同事</string>
    <string name="allworker">全体员工</string>
    <string name="workerdata">员工资料</string>
    <string name="sex">性别</string>
    <string name="phonenum">手机号</string>
    <string name="edit">编辑</string>
    <string name="zuzhibumen">组织部门</string>
    <string name="eamil">邮箱</string>
    <string name="schudle">日程</string>
    <string name="participateinproject">参与项目</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="addok">完成</string>
    <string name="paizhao">拍照</string>
    <string name="xiangce">相册</string>
    <string name="quxiao">取消</string>
    <string name="username">用户名</string>
    <string name="phone">手机</string>
    <string name="workernum">员工编号</string>
    <string name="my_information">个人中心</string>
    <string name="my_info">我的资料</string>
    <string name="changeziliao">编辑资料</string>
    <string name="soft_version">当前版本</string>
    <string name="user_setting">账号设置</string>
    <string name="mimamanager">密码管理</string>
    <string name="about_us">关于我们</string>
    <string name="company_info">企业信息</string>
    <string name="clean_cache">清理缓存</string>
    <string name="fankui">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="queren">确认</string>
    <string name="querenpassword">确认密码</string>
    <string name="dianhua">电话</string>
    <string name="bumen">部门</string>
    <string name="zhiwei">职位</string>
    <string name="jibie">级别</string>
    <string name="jiaose">角色</string>
    <string name="isshownum">隐藏手机号</string>
    <string name="usezone">已用空间</string>
    <string name="clearcatch">清理缓存</string>
    <string name="put_fankui">请输入反馈建议</string>
    <string name="putzhiwei">请输入职位</string>
    <string name="putname">请输入姓名</string>
    <string name="puteamil">请输入邮箱</string>
    <string name="putphonenum">请输入手机号</string>
    <string name="getyanzheng">获取验证码</string>
    <string name="putyuanmima">请输入原密码</string>
    <string name="putnewmima">新密码</string>
    <string name="putnewmimaagain">再次输入新密码</string>
    <string name="cunzhuzone">储存空间</string>
    <string name="gaunyu">云依生是基于开放式物联网（IOT），通过人与设备的联接、设备远程监控管理、工作任务流管理、数据分析、扩展应用和服务，来实现提升设备使用效率、降低设备和人员操作的故障率、提升人员工作效率，协助进行项目运行管控分析，辅助管理决策的工业物联网运行服务平台。</string>
    <string name="outlogin">是否退出当前账号？</string>
    <string name="minedate">我的日程</string>
    <string name="projectdate">项目日程</string>
    <string name="shebeitask">设备任务</string>
    <string name="wrongshebeitask">工单任务</string>
    <string name="liuchengtask">审批任务</string>
    <string name="isshowchexiao">是否显示已撤销日程</string>
    <string name="isshowwancheng">是否显示已完成的日程</string>
    <string name="isshowrili">是否同步日程至本机日历 </string>
    <string name="zhixing">*执行人</string>
    <string name="reset">重置</string>
    <string name="myProject">我的项目</string>
    <string name="companyProject">公司项目</string>
    <string name="projectCreateTime">创建时间：</string>
    <string name="projectCreateUser">负责人:</string>
    <string name="project">项目</string>
    <string name="device">设备</string>
    <string name="model">工艺模块</string>
    <string name="alarmRecord">报警记录</string>
    <string name="tasks">任务池</string>
    <string name="devicelist">设备列表</string>
    <string name="device_status_success">正常</string>
    <string name="device_status_error">异常</string>
    <string name="addTime">添加时间：</string>
    <string name="device_code">唯一编号：</string>
    <string name="device_use_state">使用状态：</string>
    <string name="button_cz">操作</string>
    <string name="alarm_rules">报警规则</string>
    <string name="knowledge">相关知识</string>
    <string name="device_parts">设备备件</string>
    <string name="periodic_tasks">周期任务</string>
    <string name="create_task">添加任务</string>
    <string name="process_task_detail">审批任务详情</string>
    <string name="deviceinfo_bjxx">报警信息</string>
    <string name="deviceinfo_sszb">实时指标</string>
    <string name="deviceinfo_jbxx">基本信息</string>
    <string name="deviceinfo_status">设备状态</string>
    <string name="deviceinfo_code">唯一编号</string>
    <string name="deviceinfo_isPLC">是否绑定plc</string>
    <string name="baojing_status">报错</string>
    <string name="device_info">设备运行详情</string>
    <string name="plc_info_detal">plc近10分钟指标详情</string>
    <string name="fuwei">复位</string>
    <string name="beijian_code">编号：</string>
    <string name="beijian_ghzq">更换周期：</string>
    <string name="beijian_list">备件列表</string>
    <string name="knowledge_list">知识库列表</string>
    <string name="knowledge_file_list">附件列表</string>
    <string name="knowlodge_detail">知识库详情</string>
    <string name="device_tasks_list">周期任务列表</string>
    <string name="device_tasks_status">状态：</string>
    <string name="device_tasks_desc">备注：</string>
    <string name="add_user">添加人：</string>
    <string name="alarmrules_list">报警规则列表</string>
    <string name="alarmrules_value">阈值：</string>
    <string name="alarmrules_set">报警规则：</string>
    <string name="alarmrules_desc">报警描述：</string>
    <string name="alarmrules_status_enable">正常</string>
    <string name="alarmrules_status_disabled">禁用</string>
    <string name="alarm_history">报警记录</string>
    <string name="alarm_history_time">报警时间：</string>
    <string name="alarm_history_type">报警类型：</string>
    <string name="alarm_history_project">所属项目：</string>
    <string name="device_nums">设备数量：</string>
    <string name="model_status">使用状态：</string>
    <string name="alarm_history_type_1">设备报警</string>
    <string name="alarm_history_type_2">工艺模块报警</string>
    <string name="alarm_history_type_3">项目报警</string>
    <string name="alarm_detail">报警详情</string>
    <string name="alarm_detail_jbxx">基本信息</string>
    <string name="alarm_detail_plc">报警前后10分钟PLC指标</string>
    <string name="enable">启用</string>
    <string name="disable">禁用</string>
    <string name="alarmrules_status">状态：</string>
    <string name="alarmrules_update_time">恢复时间：</string>
    <string name="model_running_status_1">正常</string>
    <string name="model_running_status_2">异常</string>
    <string name="model_picture">工艺模块图纸</string>
    <string name="project_tasks_list">任务池列表</string>
    <string name="edit_task">编辑任务</string>
    <string name="remove_task">撤销任务</string>
    <string name="assign_task">分配任务</string>
    <string name="claim_task">认领任务</string>
    <string name="do_task">立即执行</string>
    <string name="back_task">回退</string>
    <string name="look_task_info">查看反馈</string>
    <string name="look_task_child">查看详情</string>
    <string name="task_info">任务详情</string>
    <string name="task_create_user">创建人：</string>
    <string name="task_create_time">创建时间：</string>
    <string name="task_start_end_time">*起止时间</string>
    <string name="task_start_end_time_1">起止时间</string>
    <string name="task_do_user">认领人：</string>
    <string name="task_status_1">未认领</string>
    <string name="task_status_2">已认领</string>
    <string name="task_status_3">已完成</string>
    <string name="task_status_4">未完成</string>
    <string name="task_status_5">已超时</string>
    <string name="task_status_6">已退回</string>
    <string name="task_back_info_list">回退意见</string>
    <string name="device_model_info">工艺模块运行详情</string>
    <string name="device_model_about">相关设备</string>
    <string name="device_use_status">使用状态</string>
    <string name="submit">确定</string>
    <string name="close">取消</string>
    <string name="select_project">*选择项目</string>
    <string name="select_project_device">*选择设备</string>
    <string name="task_name">*任务名称</string>
    <string name="task_cycle_time">*执行周期</string>
    <string name="task_used_time">*执行时长</string>
    <string name="task_status">正常/禁用</string>
    <string name="task_desc">*备注</string>
    <string name="task_back_detail_1">*任务反馈项</string>
    <string name="task_back_detail_form_1">*任务反馈表单</string>
    <string name="task_back_detail">任务反馈项</string>
    <string name="task_back_detail_form">任务反馈表单</string>
    <string name="task_flow">审批任务</string>
    <string name="task_temporary">临时任务</string>
    <string name="task_cycle">周期任务</string>
    <string name="task_flow_form">*审批表单</string>
    <string name="task_flow_user">*审批人</string>
    <string name="task_flow_time">*审批截止时间</string>
    <string name="task_start_time">*开始时间</string>
    <string name="task_end_time">*结束时间</string>
    <string name="cron_name">生成CRON表达式</string>
    <string name="cron_select_left">*每</string>
    <string name="cron_select_2">*第一次运行时间</string>
    <string name="cron_minute">分钟</string>
    <string name="cron_hour">小时</string>
    <string name="cron_day">天</string>
    <string name="cron_week">星期</string>
    <string name="cron_mouth">个月的第</string>
    <string name="add_task_template_field">添加任务反馈项</string>
    <string name="field_name">*反馈项名称</string>
    <string name="filed_type">*反馈项数据类型</string>
    <string name="field_value">备选项</string>
    <string name="field_desc">文字说明</string>
    <string name="field_radio">单选</string>
    <string name="select_project_list">选择项目列表</string>
    <string name="select_project_device_list">选择设备列表</string>
    <string name="select_project_form_list">选择工单列表</string>
    <string name="select_process_form_list">选择审批表单列表</string>
    <string name="select_project_user_list">选择分派人员列表</string>
    <string name="select_checked_user_list">选择审批人员</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="search_process">搜索审批表单</string>
    <string name="alarm_rules_level_1">普通</string>
</resources>