<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">
    <ImageView
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:layout_marginBottom="52dp"
        android:layout_marginTop="55dp"
        android:src="@mipmap/login_logo" />
    <LinearLayout
        style="@style/login_linearLayout_style">
        <ImageView
            style="@style/login_icon_style"
            android:background="@mipmap/login_icon_phone"/>
        <EditText
            android:id="@+id/et_account"
            style="@style/LoginInputother"
            android:hint="@string/account"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/login_linearLayout_style"
        android:orientation="horizontal">
        <ImageView
            style="@style/login_icon_style"
            android:background="@mipmap/icon_message"/>
        <EditText
            android:id="@+id/yzm"
            style="@style/LoginInputother"
            android:hint="@string/yzm"
            android:layout_width="match_parent"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/get_yzm"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="@drawable/yzm_bg"
            android:textSize="@dimen/distance_13"
            android:text="@string/get_yzm"/>
    </LinearLayout>
    <LinearLayout
        style="@style/login_linearLayout_style">
        <ImageView
            style="@style/login_icon_style"
            android:background="@mipmap/login_icon_password"/>
        <EditText
            android:id="@+id/password"
            style="@style/LoginInputother"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:hint="@string/newpassword" />
    </LinearLayout>
    <LinearLayout
        style="@style/login_linearLayout_style">
        <ImageView
            style="@style/login_icon_style"
            android:background="@mipmap/login_icon_password"/>
        <EditText
            android:id="@+id/passworded"
            style="@style/LoginInputother"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:hint="@string/newpassworded" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_41"
        android:layout_marginLeft="@dimen/distance_35"
        android:layout_marginRight="@dimen/distance_35"
        android:background="@drawable/login_linearlayout_button_radios"
        android:textColor="@color/color_login_button"
        android:text="@string/update"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/distance_35"
        android:layout_marginLeft="@dimen/distance_35"
        android:layout_marginTop="@dimen/distance_5"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_mini"
            android:textColor="@color/white"
            android:text="@string/zhuce"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_mini"
            android:textColor="@color/white"
            android:text="@string/tobacklogin"
            />
    </LinearLayout>

</LinearLayout>
