<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/distance_110"
        android:layout_height="@dimen/distance_95"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/distance_52"
        android:layout_marginTop="@dimen/distance_55"
        android:src="@mipmap/login_logo" />

    <LinearLayout style="@style/login_linearLayout_style">

        <ImageView
            style="@style/login_icon_style"
            android:background="@mipmap/login_icon_phone" />

        <EditText
            android:id="@+id/et_account"
            style="@style/LoginInputother"
            android:hint="@string/account" />
    </LinearLayout>

    <LinearLayout style="@style/login_linearLayout_style">

        <ImageView
            style="@style/login_icon_style"
            android:background="@mipmap/login_icon_password" />

        <EditText
            android:id="@+id/et_password"
            style="@style/LoginInputother"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yzm_layout"
        style="@style/login_linearLayout_style"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            style="@style/login_icon_style"
            android:background="@mipmap/icon_message" />

        <EditText
            android:id="@+id/yzm"
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:hint="@string/yzm" />

        <Button
            android:id="@+id/get_yzm"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/yzm_bg"
            android:gravity="center"
            android:text="@string/get_yzm"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_41"
        android:layout_marginLeft="@dimen/distance_35"
        android:layout_marginRight="@dimen/distance_35"
        android:background="@drawable/login_linearlayout_button_radios"
        android:text="@string/login"
        android:textColor="@color/color_login_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/distance_35"
        android:layout_marginRight="@dimen/distance_35"
        android:layout_marginTop="@dimen/distance_12"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zhuce"
            android:textColor="@color/white"
            android:textSize="@dimen/text_mini" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpassword"
            android:textColor="@color/white"
            android:textSize="@dimen/text_mini" />
    </LinearLayout>

</LinearLayout>
