<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/baseBackgroundColor"
    android:orientation="vertical">
    <include layout="@layout/project_info_banner" />

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_41"
        android:background="@color/white"
        android:layout_marginTop="@dimen/distance_10"
        app:tabGravity="center"
        app:tabTextColor="@color/color_666"
        app:tabSelectedTextColor="@color/color_333"
        app:tabIndicatorColor="@color/color_tab_selected">
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/device" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/model" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/alarmRecord" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tasks" />
    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/project_info_viewpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>