<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_1"
        android:background="@color/color_e7e7e7"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_100"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/distance_10"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/edit_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit_task"
                android:drawableTop="@mipmap/icon_edit_task"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:textSize="@dimen/distance_14"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/remove_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/remove_task"
                android:drawableTop="@mipmap/icon_remove_task"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:textSize="@dimen/distance_14"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/assign_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/assign_task"
                android:drawableTop="@mipmap/icon_assign_task"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:textSize="@dimen/distance_14"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/claim_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/claim_task"
                android:textSize="@dimen/distance_14"
                android:drawableTop="@mipmap/icon_claim_task"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/do_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/do_task"
                android:textSize="@dimen/distance_14"
                android:drawableTop="@mipmap/icon_do_task"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/back_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back_task"
                android:textSize="@dimen/distance_14"
                android:drawableTop="@mipmap/icon_back_task"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/look_task_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/look_task_info"
                android:textSize="@dimen/distance_14"
                android:drawableTop="@mipmap/icon_task_back_info"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/look_task_child_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/look_task_child"
                android:textSize="@dimen/distance_14"
                android:drawableTop="@mipmap/icon_task_child_list"
                android:gravity="center"
                android:textColor="@color/color_333"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_1"
        android:background="@color/color_e7e7e7"/>
    <ImageView
        android:id="@+id/btn_cz_close"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_45"
        android:src="@mipmap/icon_bottom_close"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>