<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/distance_10"
    android:orientation="vertical"
    android:paddingVertical="@dimen/distance_5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/alram_rules_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="报警规则名称 bbbbb"
            android:textColor="@color/color_333"
            android:textSize="@dimen/distance_14"
            />
        <TextView
            android:id="@+id/alarm_rules_level"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/alarm_rules_level_1"
            android:textColor="@color/color_333"
            android:background="@color/alarmrules_level_1"
            android:layout_marginLeft="@dimen/distance_8"
            android:textSize="@dimen/distance_8"
            android:gravity="center"
            android:paddingVertical="@dimen/distance_2"
            android:paddingHorizontal="@dimen/distance_8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTime"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            />
        <TextView
            android:id="@+id/addtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2018-01-11 00:00:00"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/alarmrules_set"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            />
        <TextView
            android:id="@+id/alarmrules_set"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=">"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"/>
        <TextView
            android:id="@+id/alarm_rules_level_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmrules_value"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            android:layout_marginLeft="@dimen/distance_15"
            />
        <TextView
            android:id="@+id/alarmrules_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmrules_status"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            android:layout_marginLeft="@dimen/distance_15"
            />
        <TextView
            android:id="@+id/alarmrules_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmrules_status_enable"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmrules_desc"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            />
        <TextView
            android:id="@+id/alarmrules_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3天"
            android:textColor="@color/color_666"
            android:textSize="@dimen/distance_12"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_1"
        android:background="@color/color_e7e7e7"
        android:layout_marginTop="@dimen/distance_10"/>
</LinearLayout>
