<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/baseBackgroundColor"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_49"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/distance_10"
        android:layout_marginBottom="@dimen/distance_10">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_process_form_list"
            android:textColor="@color/color_333"
            android:gravity="center"
            android:textSize="@dimen/distance_14"
            />
        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:textColor="@color/color_333"
            android:gravity="center"
            android:textSize="@dimen/distance_14"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_5"
        android:layout_marginBottom="@dimen/distance_10"
        android:layout_marginHorizontal="@dimen/distance_10"
        android:background="@color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/search"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/distance_5"/>
        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search_process"
            android:textColorHint="@color/color_666"
            android:textSize="@dimen/distance_12"
            android:textColor="@color/color_333"/>
    </LinearLayout>
    <ListView
        android:id="@+id/select_project_device_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice">

    </ListView>

</LinearLayout>
